@@ -1,3 +1,8 @@
+2005-02-11  Nick Clifton  <nickc@redhat.com>
+
+	* iq2000.opc (parse_jtargq10): Change type of valuep argument to
+	'bfd_vma *' in order avoid compile time warning message.
+
 2005-01-28  Hans-Peter Nilsson  <hp@axis.com>
 
 	* cris.cpu (mstep): Add missing insn.
